Add first db interaction