@@ -1,3 +1,4 @@
+import java.util.ArrayList;
 import java.util.List;
 import java.sql.Connection;
 import java.sql.ResultSet;
@@ -6,15 +7,22 @@ import java.sql.Statement;
 
 public class Main {
     public static void main(String[] args) {
-        //EinlesenDemo.einlesen();
-        //DBVerbindung db = new DBVerbindung();
-        //db.dbVerwenden();
-
-        List<String> files = Utils.openFolder("data/quadrants");
+        List<String> quadrantPaths = Utils.openFolder("data/quadrants");
+        List<Quadrant> quadrants = new ArrayList<>();
+        for (String path : quadrantPaths) {
+            quadrants.add(Quadrant.fromFile(path));
+        }
 
         try (Connection conn = Utils.dbConnectTo("data/cartography.sqlite")) {
             assert conn != null;
             conn.createStatement().execute("PRAGMA foreign_keys = ON; PRAGMA foreign_keys;"); // Needed for deletion cascade
+
+            for (Quadrant quadrant : quadrants) {
+                boolean planetExists = conn
+                        .createStatement()
+                        .executeQuery("SELECT COUNT(*) AS 'COUNT' FROM Planets WHERE name = '" + quadrant.getPlanetName() + "';")
+                        .getInt("COUNT") > 0;
+            }
             Statement stmt = conn.createStatement();
             String anfragestring = "SELECT * FROM Planets;";
             ResultSet rset = stmt.executeQuery(anfragestring);
@@ -28,7 +36,6 @@ public class Main {
             Utils.logTS("Abgemeldet.\n");
         } catch (SQLException e) {
             Utils.logTS("SQL Error at cartography database: " + e);
-            e.printStackTrace();
         }
 
         // "data/PlanetA-Q1_6x13.txt"
@@ -36,7 +43,7 @@ public class Main {
         // "data/PlanetB-Q5_50x100.txt"
 
         // setup quadrant
-        Quadrant q = Quadrant.fromFile(files.get(0));
+        Quadrant q = Quadrant.fromFile(quadrantPaths.getFirst());
         assert q != null;
         Utils.logTS("Name: " + q.getPlanetName());
         Utils.logTS("Quadrant: Q" + q.getQuadrant());
